Add the route /api/v1/users with POST method for registry Users
