# src/main/java/co/edu/uniquindio/ingesis/restful/resources/UserResources.java
@@ -1,0 +1,26 @@
+package co.edu.uniquindio.ingesis.restful.resources;
+
+import co.edu.uniquindio.ingesis.restful.dtos.UserRegistrationRequest;
+import co.edu.uniquindio.ingesis.restful.dtos.UserRegistrationResponse;
+import jakarta.validation.Valid;
+import jakarta.ws.rs.Consumes;
+import jakarta.ws.rs.POST;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+
+import java.util.UUID;
+
+@Path("/api/v1/users")
+@Produces(MediaType.APPLICATION_JSON)
+@Consumes(MediaType.APPLICATION_JSON)
+public class UserResources {
+
+    @POST
+    public Response Create(@Valid UserRegistrationRequest request){
+
+        var response = new UserRegistrationResponse(UUID.randomUUID().toString(), request.role());
+        return Response.status(Response.Status.CREATED).entity(response).build();
+    }
+}
